# Ultra-sim

./: .gitattributes  LICENSE
four_wheeled_vehicle_plugin/: CMakeLists.txt  package.xml
four_wheeled_vehicle_plugin/include/: four_wheeled_vehicle_plugin.h
four_wheeled_vehicle_plugin/launch/: vehicle_gazebo.launch.py  vehicle_gazebo.launch（复件）.py
four_wheeled_vehicle_plugin/models/four_wheeled_vehicle/: four_wheeled_vehicle.urdf  model.config  model.sdf
four_wheeled_vehicle_plugin/models/four_wheeled_vehicle/meshes/: car.dae
four_wheeled_vehicle_plugin/rviz/: my.rviz
four_wheeled_vehicle_plugin/src/: four_wheeled_vehicle_plugin.cpp
four_wheeled_vehicle_plugin/worlds/: empty.world
joy_to_vehicle_cmd/: CMakeLists.txt  package.xml
joy_to_vehicle_cmd/src/: joy_to_vehicle_cmd_node.cpp
scripts/: test.py
vehicle_msgs/: CMakeLists.txt  package.xml
vehicle_msgs/msg/: VehicleStatus.msg
